# Arquivo: backend/wallets/Cargo.toml

[package]
name = "mithril-wallets"
version = "0.1.0"
edition = "2021"
authors = ["Equipe Mithril"]
description = "Sistema de wallets para a plataforma Mithril na rede Stellar"
license = "MIT"

[lib]
name = "mithril_wallets"
path = "src/lib.rs"

# Binário CLI (opcional)
[[bin]]
name = "wallet-cli"
path = "src/main.rs"
required-features = ["cli"]

# Exemplo: Criar wallets
[[example]]
name = "create_wallets"
path = "examples/create_wallets.rs"

# Exemplo: Ativar contas na Testnet
[[example]]
name = "activate_testnet"
path = "examples/activate_testnet.rs"
required-features = ["testnet"]

[dependencies]
# Serialização
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Criptografia
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

# HTTP Client (para Testnet)
reqwest = { version = "0.11", features = ["json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
cli = []
testnet = ["reqwest", "tokio"]

# Profile otimizado para release
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true